--- a/AgroPetWeb/Web.config
+++ b/AgroPetWeb/Web.config
@@ -41,12 +41,13 @@
     </compilers>
   </system.codedom>-->
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=LENOVO-PC\BORNE;Initial Catalog=websites;User ID=sa;Password=n3f3rt4r10;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Data Source=LAPTOP-6TB8EKBA\BORNE;Initial Catalog=websites;User ID=sa;Password=n3f3rt4r10;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+		<add name="FireBird" connectionString="Server=localhost;User=SYSDBA;Password=masterkey;Database=C:\sys\BD\PetFirebird\PRUEBASWEB.FDB" providerName="System.Data.SqlClient"/>
     <!--<add name="ConnMySQLPruebas" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />
     <add name="ConnMySQLAgropet" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />-->
   </connectionStrings>
   <appSettings>
-    <add key="rutaImagenesBanners" value="ImagenesBanner\"/>
+    <add key="rutaImagenesBanners" value="/ImagenesBanner/"/>
     <add key="rutaImagenesArticulos" value="ImagenesArticulos\"/>
   </appSettings>
 </configuration>
